--- a/app/components/parts/Button/Button.module.css
+++ b/app/components/parts/Button/Button.module.css
@@ -1,10 +1,12 @@
 .button {
-  width: 200px;
+  width: 100%;
   height: 50px;
-  padding: 4px 8px;
-  border: none;
+  border: 1px solid;
   border-radius: 5px;
-  font-size: 16px;
+  font-size: 18px;
+  font-weight: 700;
+  cursor: pointer;
+  outline: none;
 }
 .button-primary {
   background-color: #007bff;
@@ -14,6 +16,7 @@
   background-color: #dc3545;
   color: #fff;
 }
-.button:hover {
-  opacity: 0.7;
+.button-blue {
+  background: #2691d2;
+  color: #e9f4fb;
 }
