--- a/app/components/parts/Icon/Icon.module.css
+++ b/app/components/parts/Icon/Icon.module.css
@@ -4,7 +4,6 @@
 }
 .icon {
   border-radius: 50%;
-  border: #eee 3px solid;
 }
 .mark {
   position: absolute;
@@ -14,5 +13,6 @@
   height: 18px;
   border: #fff 3px solid;
   bottom: 5px;
-  right: 2px;
+  right: -3px;
+  font-weight: bold;
 }
