--- a/app/components/features/ChatList/ChatList.module.css
+++ b/app/components/features/ChatList/ChatList.module.css
@@ -1,9 +1,57 @@
+.side__header {
+  display: flex;
+  flex: 1;
+  justify-content: space-between;
+  align-items: center;
+  font-weight: bold;
+  padding: 5px 35px;
+  border-bottom: 2px solid #0052a5;
+  height: 80px;
+}
+.side__header p {
+  font-size: 1.5em;
+}
+.chatlist__container {
+  background-color: #0a66c2;
+}
 .chatlist {
   display: flex;
   align-items: center;
-  padding: 20px;
   gap: 0 20px;
+  padding: 20px;
+  border-bottom: 1px solid #0a66c2;
+  color: white;
+  text-decoration: none;
+}
+.chatlist:hover {
+  background-color: #0052a5;
+}
+.link {
+  text-decoration: none;
 }
 .name {
   font-size: 1.2em;
+}
+.button {
+  background-color: transparent;
+  border: none;
+  cursor: pointer;
+}
+.popover__item {
+  display: flex;
+  align-items: center;
+  gap: 10px;
+  padding: 20px;
+  margin-bottom: 1em;
+  background-color: transparent;
+  border: none;
+  cursor: pointer;
+  width: 100%;
+}
+.popover__item:hover {
+  background-color: #f0f0f0;
+}
+.modal__item {
+  margin-bottom: 30px;
+  font-size: 1.3em;
 }
