--- a/app/components/features/Chat/Chat.module.css
+++ b/app/components/features/Chat/Chat.module.css
@@ -2,19 +2,39 @@
   display: flex;
   flex-direction: column;
   height: 100%;
+  background-color: white;
 }
 .chat__header {
-  background-color: white;
+  box-shadow: 0px 3px 2px rgba(0, 0, 0, 0.1);
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  padding: 0 40px;
+  height: 80px;
 }
 .chat__header h1 {
   margin: 0;
   padding: 20px;
-  border-bottom: #eeefee solid 1px;
 }
 .chat__messages {
   flex: 1;
-  padding: 10px;
+  padding: 20px;
+  margin: 20px;
+  display: flex;
+  flex-direction: column-reverse;
+  gap: 30px 0;
+  overflow-y: scroll;
 }
-.chat__input {
-  padding: 10px;
+.button {
+  background-color: transparent;
+  border: none;
+  cursor: pointer;
+}
+.popover__wrapper h4 {
+  text-align: center;
+}
+.userlist {
+  display: flex;
+  align-items: center;
+  gap: 1em;
 }
