--- a/app/components/pages/ChatTop/ChatTop.module.css
+++ b/app/components/pages/ChatTop/ChatTop.module.css
@@ -1,12 +1,20 @@
-.chattop {
+.chat__top {
   display: flex;
   height: 100vh;
 }
 .chat__side {
   flex: 0.25;
-  background-color: blue;
+  background-color: #0a66c2;
   color: white;
 }
 .chat__main {
   flex: 0.75;
+  display: flex;
+  flex-direction: column;
+  background-color: white;
+}
+.message {
+  display: flex;
+  flex-direction: column;
+  flex: 1;
 }
